[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/ColourCombo/ColourComboBackground.png" type="Texture" id=1]
[ext_resource path="res://Sprites/ColourCombo/ColourComboRed1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ColourCombo/ColourComboRed2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ColourCombo/ColourComboGreen1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ColourCombo/ColourComboYellow1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ColourCombo/ColourComboBlue2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ColourCombo/ColourComboNote.png" type="Texture" id=7]
[ext_resource path="res://Sprites/ColourCombo/ColourComboYellow2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/ColourCombo/ColourComboBlue1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/ColourCombo/ColourComboGreen2.png" type="Texture" id=10]
[ext_resource path="res://Resources/Fonts/MainFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://Scenes/UI/ColourCombo.gd" type="Script" id=12]

[node name="ColourCombo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
sequence = [ "Red", "Blue", "Green", "Yellow" ]

[node name="Background" type="TextureRect" parent="."]
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 1 )
expand = true

[node name="RedButton" type="TextureButton" parent="Background"]
margin_left = 64.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 160.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="YellowButton" type="TextureButton" parent="Background"]
margin_left = 128.0
margin_top = 96.0
margin_right = 192.0
margin_bottom = 160.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="BlueButton" type="TextureButton" parent="Background"]
margin_left = 64.0
margin_top = 160.0
margin_right = 128.0
margin_bottom = 224.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="GreenButton" type="TextureButton" parent="Background"]
margin_left = 128.0
margin_top = 160.0
margin_right = 192.0
margin_bottom = 224.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="Note" type="TextureRect" parent="Background"]
margin_left = 200.0
margin_top = 72.0
margin_right = 328.0
margin_bottom = 200.0
texture = ExtResource( 7 )
expand = true

[node name="NoteText" type="Label" parent="Background/Note"]
margin_top = 56.0
margin_right = 68.0
margin_bottom = 153.0
rect_rotation = -44.5273
custom_fonts/font = ExtResource( 11 )

[node name="SequenceLabel" type="Label" parent="Background"]
margin_left = 40.0
margin_top = 40.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 11 )
valign = 1

[node name="HoveredLabel" type="Label" parent="Background"]
margin_left = 192.0
margin_top = 40.0
margin_right = 216.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 11 )
align = 2
valign = 1

[connection signal="mouse_entered" from="Background/RedButton" to="." method="_on_RedButton_mouse_entered"]
[connection signal="pressed" from="Background/RedButton" to="." method="_on_RedButton_pressed"]
[connection signal="mouse_entered" from="Background/YellowButton" to="." method="_on_YellowButton_mouse_entered"]
[connection signal="pressed" from="Background/YellowButton" to="." method="_on_YellowButton_pressed"]
[connection signal="mouse_entered" from="Background/BlueButton" to="." method="_on_BlueButton_mouse_entered"]
[connection signal="pressed" from="Background/BlueButton" to="." method="_on_BlueButton_pressed"]
[connection signal="mouse_entered" from="Background/GreenButton" to="." method="_on_GreenButton_mouse_entered"]
[connection signal="pressed" from="Background/GreenButton" to="." method="_on_GreenButton_pressed"]
